# dio_bank

./: .gitignore  pyproject.toml
migrations/versions/: 2cb3c315e68d_initial_migrate.py  62ab19c2ce20_initial_migrate.py  f31c949edc83_add_column_active_in_user.py  f3410fdda53f_initial_add_password.py
src/: app.py  config.py  render-deploy.sh  wsgi.py
src/controllers/: auth_controller.py  post_controller.py  role_controller.py  user_controller.py
src/models/: __init__.py  base.py  post.py  role.py  user.py
src/utils/: eleva_quadrado.py  requires_roles.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user_controller.py
tests/unit/: test_unit.py
