[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["Paulo Santos <paulorfsantos17@gmail.com>"]
readme = "README.md"
packages = [{include = "dio_bank", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.0"
flask-jwt-extended = "^4.7.1"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
psycopg2-binary = "*"
gunicorn = "^23.0.0"
flask-bcrypt = "^1.0.1"
flask-marshmallow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

